<resources>
    <string name="app_name">Pro Gallery</string>
    <string name="action_sort">Sort</string>
    <string name="bytes">%s B</string>
    <string name="email_forget_hint">Please insert valid mail id, it will help you to forgot password</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="gigabytes">%s GB</string>
    <string name="kilobytes">%s KB</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_filter">Filter</string>
    <string name="label_shape">Shape</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_text">Text</string>
    <string name="megabytes">%s MB</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="no_delete_image">No Photos!</string>
    <string name="no_delete_video">No Videos!</string>
    <string name="no_hide_image">No Photos! \n Please add some photos.</string>
    <string name="no_hide_video">No Videos! \n Please add some videos.</string>
    <string name="permission_force">App requires permission to Storage to view images. Tap Settings and go to Permissions to grant permission.</string>
    <string name="permission_info">App requires permission to Storage to view images.</string>
    <string name="permission_ok">OK</string>
    <string name="permission_package">package</string>
    <string name="permission_settings">Settings</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="private_hint_text">Please set security Passcode \n to prevent important photos &amp; videos access.</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_hint">SearchHint</string>
    <string name="search_menu_title">Search</string>
    <string name="set_as">Set As</string>
    <string name="ChooseColor">Choose color</string>
    <string name="OK">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="No">No</string>
    <string name="delete_image_msg">Delete Image</string>
    <string name="Delete_images">Delete Image</string>
    <string name="Delete_image_successfully">Delete Image Successfully</string>
    <string name="Selected_toolbar">Selected Toolbar</string>
    <string name="share_with">Share</string>
    <string name="Permission_not_allowed">Permission Not allow</string>
    <string name="not_found">Not Found</string>
    <string name="Pictures">Picture</string>
    <string name="Album">Album</string>
    <string name="Videos">Video</string>
    <string name="Story">Story</string>
    <string name="Selected">Selected</string>
    <string name="Pleaseselectimage">Please select image</string>
    <string name="delete_image_seleted_Msg">Delete image selected</string>
    <string name="Yes">Yes</string>
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="action_settings">Settings</string>
    <string name="photo">Photo</string>
    <string name="similar_photos">Similar Photos</string>
    <string name="selected_item">Selected Item</string>
    <string name="favourite">Favourite</string>
    <string name="please_remember_this_security_question_and_answer_in_case_you_forgot_your_password_that_time_it_will_be_help_to_reset_your_password">Please Remember this security question and answer. In case you forgot your password that time it will be help to reset your password.</string>
    <string name="security_question">Security Question :</string>
    <string name="enter_security_answer">Enter Security Answer :</string>
    <string name="hard_to_remember">Hard to Remember ?</string>
    <string name="save_this_image_in_your_safe_place">Save this image in your safe place.</string>
    <string name="submit">Submit</string>
    <string name="privateee">Private</string>
    <string name="location">Location</string>
    <string name="mediacolor">MediaColor</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="add_new_password">Add New Password</string>
    <string name="create_your_new_pin">Create your new PIN</string>
    <string name="set_your_personal_4_dight_code_it_will_be_used_for_secure_and_fast">Set your personal 4 - digit code. it will be used for secure and fast.</string>
    <string name="change_password">Change Password</string>
    <string name="change_question">Change Question</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="name">Name:</string>
    <string name="path">Path:</string>
    <string name="size">Size:</string>
    <string name="created_on">Created on:</string>
    <string name="details">Details</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="add_new_folder">Add New Folder</string>
    <string name="slideshow_effect">Slideshow Effect</string>
    <string name="brush">Brush</string>
    <string name="opacity">Opacity</string>
    <string name="items">Items :</string>
    <string name="please_allow_location_permission">Please allow Location permission</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="lock_video">Lock Video</string>
    <string name="rename_folder">Rename Folder</string>
    <string name="rename_file">Rename File</string>
    <string name="enter_folder_name">Enter Folder Name</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="are_you_sure_you_want_to_restore_image">Are you sure you want to restore image?</string>
    <string name="restore_image">Restore Image</string>
    <string name="restore_video">Restore Video</string>
    <string name="are_you_sure_you_want_to_restore_video">Are you sure you want to restore video?</string>
    <string name="security">Security</string>
    <string name="set_your_security_lock_for_hide_photos">Set your security lock for hide photos!</string>
    <string name="last_modifydate">Last modifyDate</string>
    <string name="sorting">Sorting</string>
    <string name="namee">Name</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="unlock_video">Unlock Video</string>
    <string name="are_you_sure_you_want_to_unlock_video">Are you sure you want to unlock video?</string>
    <string name="sizee">Size</string>
    <string name="enter_passcode_to_access_your_private_data">Enter Passcode to access your Private Data.</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="home">Home</string>
    <string name="duplicate_images">Duplicate Images</string>
    <string name="favorite_images">Favorite Images</string>
    <string name="other">Other</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us">About Us</string>
    <string name="effect">Effect</string>
    <string name="enter_text_here">Enter Text here</string>
    <string name="lock_files">Lock Files</string>
    <string name="lock_image">Lock Image</string>
    <string name="unlock_image">Unlock Image</string>
    <string name="are_you_sure_you_want_to_unlock_image">Are you sure you want to unlock image?</string>
    <string name="language">Language</string>
    <string name="wallpaper_set_successfully">Wallpaper set Successfully !!</string>
    <string name="files_copy_successfully">Files Copy Successfully</string>
    <string name="files_move_successfully">Files Move Successfully.</string>
    <string name="files_are_deleted_successfully">Files are deleted successfully.</string>
    <string name="couldn_t_delete_some_files">Couldn\'t delete some files.</string>
    <string name="unfavourite_successfully">Unfavourite successfully</string>
    <string name="favourite_successfully">Favourite successfully</string>
    <string name="path_copied_successfully">Path copied successfully.</string>
    <string name="please_wait_a_while">Please wait a while...</string>
    <string name="files_are_unlocked_successfully">Files are unlocked successfully.</string>
    <string name="files_are_restored_successfully">Files are restored successfully.</string>
    <string name="are_you_sure_you_want_to_delete_image">Are you sure you want to delete image?</string>
    <string name="are_you_sure_you_want_to_delete_video">Are you sure you want to delete video?</string>
    <string name="delete_image">Delete Image</string>
    <string name="delete_video">Delete Video</string>
    <string name="try_different_name">Try different name</string>
    <string name="image_name_can_not_be_empty">Image name can not be empty!</string>
    <string name="video_name_can_not_be_empty">Video name can not be empty!</string>
    <string name="rename_successfully">Rename successfully</string>
    <string name="set_your_security_lock_for_hide_videos">Set your security lock for hide videos!</string>
    <string name="not_read_write">not Read Write</string>
    <string name="files_moved_to_vault_successfully">Files moved to vault successfully.</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="move_to">Move to</string>
    <string name="copy_path">Copy path</string>
    <string name="edit">Edit</string>
    <string name="lock">Lock</string>
    <string name="slideshow">Slideshow</string>
    <string name="unlock">Unlock</string>
    <string name="turn_on">Turn on</string>
    <string name="notification_camera_locations_storage">Notification, Camera, Locations, Storage</string>
    <string name="please_allow_all_permission_to_use_receive_updates_and_reminders">Please allow all permission to use, receive updates and reminders</string>
    <string name="permissionx_needs_following_permissions_to_continue">PermissionX needs following permissions to continue</string>
    <string name="please_allow_following_permissions_in_settings">Please allow following permissions in settings</string>
    <string name="the_following_permissions_are_denied">The following permissions are denied：</string>
    <string name="exit_app">Exit App</string>
    <string name="do_you_want_to_exit_an_app">Do You Want to Exit\n An App?</string>
    <string name="camera">Camera</string>
    <string name="slide_effect">Slide Effect</string>
    <string name="google_maps_key">AIzaSyCTZ4m-o7GYk6B7LPDg808-xh6E1PcZr9Q</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="allow">Allow</string>
    <string name="image_copy_successfully">Image Copy successfully</string>
    <string name="invalid_answer_please_enter_correct_answer">Invalid Answer. Please Enter Correct Answer</string>
    <string name="please_enter_answer">Please enter answer.</string>
    <string name="please_set_security">Please Set Security!!</string>
    <string name="please_enter_passcode">Please Enter Passcode!!</string>
    <string name="confirm_password">Confirm Password.</string>
    <string name="invalid_password">Invalid Password.</string>
    <string name="enter_new_password">Enter New Password.</string>
    <string name="you_can_t_use_old_password_as_current_password">You can\'t use old Password as current Password.</string>
    <string name="set_diffrent_password">Set Diffrent Password.</string>
    <string name="set_password">Set Password</string>
    <string name="no_photos_found">No Photos Found!!</string>
</resources>