<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/dbox_btn_bg">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="vertical"
            android:padding="@dimen/_2sdp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:fontFamily="@font/itim_regular"
                android:gravity="center"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/txt_color"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:id="@+id/textDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/itim_regular"
                android:gravity="center"
                android:text="@string/are_you_sure_you_want_to_delete"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rl_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/itim_regular"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/No"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />


                <TextView
                    android:id="@+id/rl_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/itim_regular"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/Yes"
                    android:textColor="@color/txt_orange"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
