<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/dbox_btn_bg">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="vertical"
            android:padding="@dimen/_2sdp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:fontFamily="@font/itim_regular"
                android:gravity="center"
                android:text="@string/sorting"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

            <RadioGroup
                android:id="@+id/myRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:checkedButton="@+id/sound"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/lastmodified"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:buttonTint="@color/txt_color"
                    android:fontFamily="@font/itim_regular"
                    android:includeFontPadding="false"
                    android:text="@string/last_modifydate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:theme="@style/SortingRadioButton" />

                <RadioButton
                    android:id="@+id/name"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:buttonTint="@color/txt_color"
                    android:fontFamily="@font/itim_regular"
                    android:includeFontPadding="false"
                    android:text="@string/namee"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:theme="@style/SortingRadioButton" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:alpha="0.3"
                android:background="@color/gray_text" />

            <RadioGroup
                android:id="@+id/mySortGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:checkedButton="@+id/sound"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/ascending"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/txt_color"
                    android:fontFamily="@font/itim_regular"
                    android:includeFontPadding="false"
                    android:text="@string/ascending"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:theme="@style/SortingRadioButton" />

                <RadioButton
                    android:id="@+id/descending"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="5dp"
                    android:buttonTint="@color/txt_color"
                    android:fontFamily="@font/itim_regular"
                    android:includeFontPadding="false"
                    android:text="@string/descending"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:theme="@style/SortingRadioButton" />
            </RadioGroup>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rl_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:fontFamily="@font/itim_regular"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/No"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/rl_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/itim_regular"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/Yes"
                    android:textColor="@color/txt_orange"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
