<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:background="@drawable/dbox_btn_bg">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/top_curve"
                android:fontFamily="@font/itim_regular"
                android:gravity="center"
                android:text="@string/exit_app"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

            <ImageView
                android:src="@drawable/ic_exit"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"/>

            <TextView
                android:id="@+id/textDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/itim_regular"
                android:gravity="center"
                android:text="@string/do_you_want_to_exit_an_app"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rl_no"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:fontFamily="@font/itim_regular"
                    android:backgroundTint="@color/txt_orange"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/rounded"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/No"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/rl_yes"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:fontFamily="@font/itim_regular"
                    android:backgroundTint="@color/txt_orange"
                    android:gravity="center"
                    android:background="@drawable/rounded"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/Yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
