<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:orientation="vertical"
        android:background="@drawable/dbox_btn_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/itim_regular"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/itim_regular"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Are you sure want to Delete ?"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_8sdp"
                android:padding="@dimen/_5sdp"
                android:textSize="@dimen/_14ssp"
                android:text="@string/No"
                android:fontFamily="@font/itim_regular"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/btDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/itim_regular"
                android:text="@string/Yes"
                android:textColor="@color/tab_txt" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>