<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/per_img" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/iv_pro_gallery" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/itim_regular"
                    android:includeFontPadding="false"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:text="@string/notification_camera_locations_storage"
                    android:textColor="@color/txt_orange"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/itim_regular"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/please_allow_all_permission_to_use_receive_updates_and_reminders"
                    android:textColor="#606268"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_allow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35ssp"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_60sdp"
                android:background="@drawable/rounded"
                android:fontFamily="@font/itim_regular"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/turn_on"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
